feat: sets a fixed IPv4 address for PostGIS DB image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,21 @@ services:
     volumes:
       - ./notebooks:/home/jovyan/work
       - ./datasets:/home/jovyan/work/datasets
+    networks:
+      vpc:
 
   db:
     image: postgis/postgis:17-3.5
     ports:
       - 5432:5432
     environment:
+      POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: passwd
     volumes:
       - postgis_data:/var/lib/postgresql/data
+    networks:
+      vpc:
+        ipv4_address: 10.5.0.6
 
   admin:
     image: dpage/pgadmin4
@@ -26,6 +32,16 @@ services:
       PGADMIN_DEFAULT_PASSWORD: t1-cic901
     volumes:
       - ./data:/home/pgadmin
+    networks:
+      vpc:
 
 volumes:
   postgis_data:
+
+networks:
+  vpc:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.5.0.0/16
+         gateway: 10.5.0.1
